--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "server": "nodemon server.js",
-    "heroku-postbuild": "cd yenetafrontend && npm install --only=dev && npm install && npm run build"
+    "dev": "nodemon server"
   },
   "author": "Yeneta Team",
   "license": "ISC",
